Remove quant var from rule if it spans whole domain
gitignore

refactor